# webots_ros2

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: FUNDING.yml  pull_request_template.md
docker/: Dockerfile  Makefile  README.md  bashrc
scripts/: ci_after_init.bash  ci_before_init_embed.bash  sync_controller_lib.sh  version_increase.bash
tests/: .gitignore  test_sources.py
webots_ros2/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
webots_ros2_control/: CHANGELOG.rst  CMakeLists.txt  README.md  (+3 more)
webots_ros2_my_robot/: CMakeLists.txt  package.xml  setup.py
webots_ros2_my_robot/install/: local_setup.sh  setup.sh
webots_ros2_my_robot/install/webots_ros2_my_robot/share/webots_ros2_my_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
webots_ros2_my_robot/install/webots_ros2_my_robot/share/webots_ros2_my_robot/hook/: pythonpath.ps1
webots_ros2_my_robot/install/webots_ros2_my_robot/share/webots_ros2_my_robot/protos/: MyRobotProto.proto
webots_ros2_my_robot/install/webots_ros2_my_robot/share/webots_ros2_my_robot/resource/: my_robot.urdf
webots_ros2_my_robot/install/webots_ros2_my_robot/share/webots_ros2_my_robot/worlds/: my_robot_world.wbt
webots_ros2_my_robot/launch/: my_robot_launch.py
webots_ros2_my_robot/log/: latest_build
webots_ros2_my_robot/protos/: MyRobotProto.proto
webots_ros2_my_robot/resource/: my_robot.urdf
webots_ros2_my_robot/webots_ros2_my_robot/my_robot_driver/: my_robot_driver.py
webots_ros2_my_robot/worlds/: my_robot_world.wbt
(+583 files in other folders)
